<resources>

    <string name="app_name">VictorLelis_P2</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    
    <string name="first_fragment_label">Sistema de Times e Jogadores</string>
    <string name="second_fragment_label">Times</string>
    <string name="third_fragment_label">Jogadores</string>
    <string name="FormJogador_fragment_label">Cadastro de Jogador</string>
    <string name="FormTime_fragment_label">Cadastro de Time</string>
    
    <string name="next">Próximo</string>
    <string name="previous">Voltar</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>