<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/FirstFragment">

    <!--fragmento 1-->
    <fragment
        android:id="@+id/FirstFragment"
        android:name="com.example.victorlelis_p2.FirstFragment"
        android:label="@string/first_fragment_label"
        tools:layout="@layout/fragment_first">

        <action
            android:id="@+id/action_FirstFragment_to_ThirdFragment"
            app:destination="@id/ThirdFragment" />

        <action
            android:id="@+id/action_FirstFragment_to_SecondFragment"
            app:destination="@id/SecondFragment" />
    </fragment>

    <!--fragmento 2-->
    <fragment
        android:id="@+id/SecondFragment"
        android:name="com.example.victorlelis_p2.SecondFragment"
        android:label="@string/second_fragment_label"
        tools:layout="@layout/fragment_second">

        <action
            android:id="@+id/action_SecondFragment_to_FormTime"
            app:destination="@id/FormTimeFragment" />

    </fragment>

    <!--fragmento 3-->
    <fragment
        android:id="@+id/ThirdFragment"
        android:name="com.example.victorlelis_p2.ThirdFragment"
        android:label="@string/third_fragment_label"
        tools:layout="@layout/fragment_third">

        <action
            android:id="@+id/action_ThirdFragment_to_FormJogador"
            app:destination="@id/FormJogadorFragment" />

    </fragment>

    <!-- fragmento do cadastro de time -->
    <fragment
        android:id="@+id/FormTimeFragment"
        android:name="com.example.victorlelis_p2.FormTimeFragment"
        android:label="@string/FormTime_fragment_label"
        tools:layout="@layout/fragment_form_time">
        <action
            android:id="@+id/action_FormTimeFragment_to_SecondFragment"
            app:destination="@+id/SecondFragment"/>
    </fragment>


    <!-- fragmento do cadastro de jogador -->
    <fragment
        android:id="@+id/FormJogadorFragment"
        android:name="com.example.victorlelis_p2.FormJogadorFragment"
        android:label="@string/FormJogador_fragment_label"
        tools:layout="@layout/fragment_form_jogador">
        <action
            android:id="@+id/action_FormJogadorFragment_to_ThirdFragment"
            app:destination="@+id/ThirdFragment"/>
    </fragment>



</navigation>